# Artichoke

./: .codespellignore  .gitignore  Artichoke.cmake  ExternalProjectDependency.cmake  README.md  README.rst
.circleci/: config.yml
.github/workflows/: CI.yml  codespell.yml
Docs/: .gitignore
Docs/source/: ExternalProjectDependency.rst  cmake.py  conf.py  index.rst
Tests/: ArtichokeCheckVariable.cmake  ArtichokeTest.cmake  ArtichokeTestUtility.cmake  CMakeLists.txt  External_Lib.cmake.in
Tests/AddDependencies-Test/: CMakeLists.txt
Tests/AddDependencies-Test/Lib/: CMakeLists.txt
Tests/AddDependencies-Test/TheExternals/: TheExternal_LibA.cmake  TheExternal_LibB.cmake  TheExternal_LibC.cmake  TheExternal_LibD.cmake  TheExternal_LibE.cmake  TheExternal_LibF.cmake  TheExternal_LibG.cmake
Tests/AlwaysConfigure-Test/: CMakeLists.txt
Tests/ExternalProjectFileLookup-Test/: CMakeLists.txt
Tests/ExternalProjectFileLookup-Test/Lib/: CMakeLists.txt
Tests/ExternalProjectFileLookup-Test/TheAdditionalExternals/: TheExternal_LibC.cmake  TheExternal_LibD.cmake
Tests/ExternalProjectFileLookup-Test/TheAdditionalExternals1/: TheExternal_LibF.cmake
Tests/ExternalProjectFileLookup-Test/TheAdditionalExternals2/: TheExternal_LibG.cmake  TheExternal_LibH.cmake
Tests/ExternalProjectFileLookup-Test/TheExternals/: TheExternal_LibA.cmake  TheExternal_LibB.cmake
Tests/ExternalProject_SetIfNotDefined-Cache-Test/: CMakeLists.txt
Tests/IncludeDependencies-DEPENDS-Test/: CMakeLists.txt
Tests/IncludeDependencies-DEPENDS-Test/Lib/: CMakeLists.txt
Tests/IncludeDependencies-DifferentGenerator-Test/: CMakeLists.txt
Tests/IncludeDependencies-DifferentGenerator-Test/Lib/: CMakeLists.txt
Tests/IncludeDependencies-JOB_SERVER_AWARE-Test/: CMakeLists.txt
Tests/IncludeDependencies-JOB_SERVER_AWARE-Test/Lib/: CMakeLists.txt
Tests/IncludeDependencies-MultiCall-Test/: CMakeLists.txt
Tests/IncludeDependencies-MultiCall-Test/Lib/: CMakeLists.txt
Tests/IncludeDependencies-MultiCall-Test/SuperBuild/: External_LibA.cmake
Tests/IncludeDependencies-PropagateCMakeOptions-Test/: CMakeLists.txt
Tests/IncludeDependencies-PropagateCMakeOptions-Test/Lib/: CMakeLists.txt
Tests/IncludeDependencies-SUPERBUILD_VAR-Test/: CMakeLists.txt
Tests/IncludeDependencies-USES_TERMINAL-Test/: CMakeLists.txt
Tests/IncludeDependencies-USES_TERMINAL-Test/Lib/: CMakeLists.txt
Tests/MarkAsSuperBuild-EP_ARGS_VAR-Test/: CMakeLists.txt
Tests/MarkAsSuperBuild-Test/: CMakeLists.txt
Tests/MarkAsSuperBuild-Test/Lib/: CMakeLists.txt
Tests/MarkAsSuperBuild-Test/TheExternals/: TheExternal_LibA.cmake  TheExternal_LibB.cmake  TheExternal_LibC.cmake  TheExternal_LibD.cmake  TheExternal_LibE.cmake  TheExternal_LibF.cmake  TheExternal_LibG.cmake
Tests/MarkAsSuperBuild-WithNotFoundVariable-Test/: CMakeLists.txt
Tests/SuperBuildTest/: CMakeLists.txt
Tests/SuperBuildTest/Lib/: CMakeLists.txt
Tests/SuperBuildTest/LibA/: CMakeLists.txt
Tests/SuperBuildTest/LibB/: CMakeLists.txt
Tests/SuperBuildTest/TheExternals/: TheExternal_LibA.cmake  TheExternal_LibB.cmake  TheExternal_LibC.cmake  TheExternal_LibD.cmake  TheExternal_LibE.cmake  TheExternal_LibF.cmake  TheExternal_LibG.cmake
